--- a/buildchain/index.html
+++ b/buildchain/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="component-container">Loading...</div>
-    <script type="module" src="/src/js/app.js"></script>
+    <script type="module" src="/src/js/app.ts"></script>
   </body>
 </html>
